--- a/cmake/libmoai/CMakeLists.txt
+++ b/cmake/libmoai/CMakeLists.txt
@@ -18,7 +18,8 @@ add_subdirectory ( moai-http-client )
 add_subdirectory ( moai-http-server )
 add_subdirectory ( moai-luaext )
 add_subdirectory ( moai-audiosampler )
- 
+add_subdirectory ( moai-spine )
+
 if (MOAI_TEST)
    add_subdirectory ( moai-test)
 endif (MOAI_TEST)
