--- a/cmake/hosts/host-modules/CMakeLists.txt
+++ b/cmake/hosts/host-modules/CMakeLists.txt
@@ -33,6 +33,11 @@ if ( MOAI_UNTZ OR LIB_PATH)
   target_link_libraries ( host-modules moai-untz )
 endif ( MOAI_UNTZ OR LIB_PATH)
 
+#FMOD_STUDIO
+if ( MOAI_FMOD_STUDIO OR LIB_PATH)
+  target_link_libraries ( host-modules moai-fmod-studio )
+endif ( MOAI_FMOD_STUDIO OR LIB_PATH)
+
 #SDL
 if ( MOAI_SDL OR LIB_PATH)
   target_link_libraries ( host-modules moai-sdl )
