--- a/cmake/libmoai/CMakeLists.txt
+++ b/cmake/libmoai/CMakeLists.txt
@@ -12,6 +12,8 @@ add_subdirectory ( moai-util )
 add_subdirectory ( moai-sim )
 add_subdirectory ( moai-crypto )
 
+add_subdirectory ( moai-ct-util )
+
 add_subdirectory ( moai-box2d )
 add_subdirectory ( moai-untz )
 add_subdirectory ( moai-http-client )
