--- a/cmake/libmoai/moai-android/moai-android-google-cloud-messaging/CMakeLists.txt
+++ b/cmake/libmoai/moai-android/moai-android-google-cloud-messaging/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required ( VERSION 2.8.11 )
 project ( moai-android-google-cloud-messaging )
 
-android_module("moai-android-google-cloud-messaging" "google-cloud-messaging")
+android_module("moai-android-google-cloud-messaging" "google-cloud-messaging" "googlecloudmessaging")
