--- a/3rdparty-android/google-play-services-games/project/AndroidManifest.xml
+++ b/3rdparty-android/google-play-services-games/project/AndroidManifest.xml
@@ -16,15 +16,12 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.example.games.basegameutils"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.google.example.games.basegameutils">
 
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
 
-    <application android:allowBackup="true" android:label="BaseGameUtils" >
-    </application>
+    <application/>
 
 </manifest>
