--- a/3rdparty-android/google-play-services-games/project/build.gradle
+++ b/3rdparty-android/google-play-services-games/project/build.gradle
@@ -20,20 +20,22 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.7+'
+        classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
 
 apply plugin: 'android-library'
 
-dependencies {
-    compile 'com.google.android.gms:play-services:3.1.36'
 
+dependencies {
+    compile 'com.android.support:appcompat-v7:20.0.+'
+    compile 'com.android.support:support-v4:[21,22)'
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
 
 android {
-    compileSdkVersion 18
-    buildToolsVersion "17.0.0"
+    compileSdkVersion 19
+    buildToolsVersion "21.1.2"
 
      sourceSets {
         main {
