add helper class for simple key-value (string:string) storage in sqlite3 database

--- a/xcode-ct/osx/moai-osx.xcodeproj/xcshareddata/xcschemes/moai-osx.xcscheme
+++ b/xcode-ct/osx/moai-osx.xcodeproj/xcshareddata/xcschemes/moai-osx.xcscheme
@@ -42,12 +42,12 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/vavius/moai/editor/samples"
+      customWorkingDirectory = "/Users/vavius/moai/moai-dev/"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
