--- a/xcode-ct/osx/moai-osx.xcodeproj/xcshareddata/xcschemes/moai-osx.xcscheme
+++ b/xcode-ct/osx/moai-osx.xcodeproj/xcshareddata/xcschemes/moai-osx.xcscheme
@@ -42,12 +42,12 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/rzs/Developer/Moai/Projects/tools/samples/"
+      customWorkingDirectory = "/Users/vavius/moai/moai-dev/samples/anim-basic"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
