add libs gamesparks and fb auth code

--- a/cmake/libmoai/moai-android/CMakeLists.txt
+++ b/cmake/libmoai/moai-android/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(moai-android-flurry)
 add_subdirectory(moai-android-flurry-ads)
 add_subdirectory(moai-android-fortumo)
 add_subdirectory(moai-android-fyber)
+add_subdirectory(moai-android-gamesparks)
 add_subdirectory(moai-android-google-analytics)
 add_subdirectory(moai-android-google-billing)
 add_subdirectory(moai-android-google-cloud-messaging)
