vungle libs and ios integration

--- a/xcode/libmoai/libmoai.xcodeproj/xcshareddata/xcschemes/libmoai-ios-all.xcscheme
+++ b/xcode/libmoai/libmoai.xcodeproj/xcshareddata/xcschemes/libmoai-ios-all.xcscheme
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3EDC171119F6DE00007A7775"
+            BuildableName = "libmoai-ios-all"
+            BlueprintName = "libmoai-ios-all"
+            ReferencedContainer = "container:libmoai.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
