--- a/cmake/libmoai/moai-android/CMakeLists.txt
+++ b/cmake/libmoai/moai-android/CMakeLists.txt
@@ -14,6 +14,8 @@ add_subdirectory(moai-android-chartboost)
 add_subdirectory(moai-android-crashlytics)
 add_subdirectory(moai-android-crittercism)
 add_subdirectory(moai-android-facebook)
+add_subdirectory(moai-android-firebase-config)
+add_subdirectory(moai-android-firebase-invites)
 add_subdirectory(moai-android-flurry)
 add_subdirectory(moai-android-flurry-ads)
 add_subdirectory(moai-android-fortumo)
@@ -29,6 +31,7 @@ add_subdirectory(moai-android-tapjoy)
 add_subdirectory(moai-android-twitter)
 add_subdirectory(moai-android-vungle)
 add_subdirectory(moai-android-unity-ads)
+add_subdirectory(moai-android-yandex-appmetrica)
 
 android_module("moai-android" "" "core")
 
